[package]
name = "proxyhub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["tls", "json"] }
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82", default-features = false, features = ["alloc"] }
scraper = "0.13.0"
redis = { version = "0.21.5", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
